Finalizando titulo e questionario

--- a/desktop.ini
+++ b/desktop.ini
@@ -21,3 +21,5 @@ boca rosa base.jpg=@boca rosa base,0
 Gemini_Generated_Image_ihia7hihia7hihia.jpg=@Gemini_Generated_Image_ihia7hihia7hihia,0
 04.jpg=@04,0
 serum ggg.png=@serum ggg,0
+Captura de tela 2025-06-13 093459.png=@Captura de tela 2025-06-13 093459,0
+Captura de tela 2025-06-13 112807.png=@Captura de tela 2025-06-13 112807,0
