--- a/desktop.ini
+++ b/desktop.ini
@@ -23,3 +23,5 @@ Gemini_Generated_Image_ihia7hihia7hihia.jpg=@Gemini_Generated_Image_ihia7hihia7h
 serum ggg.png=@serum ggg,0
 Captura de tela 2025-06-13 093459.png=@Captura de tela 2025-06-13 093459,0
 Captura de tela 2025-06-13 112807.png=@Captura de tela 2025-06-13 112807,0
+Captura de tela 2025-06-18 101335.png=@Captura de tela 2025-06-18 101335,0
+Captura de tela 2025-06-18 111057.png=@Captura de tela 2025-06-18 111057,0
